--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -19,9 +19,13 @@
             color="primary">
             {{ favoriteButton }}
         </button>  
-        <button mat-raised-button color="primary">View</button>  
-        <button mat-raised-button color="primary">Edit</button>  
-        <button mat-raised-button color="primary">Delete</button>  
+        <button mat-raised-button color="primary" (click)="viewNote()">View</button>  
+        <button mat-raised-button color="primary" (click)="editNote()">Edit</button>  
+        <button 
+            (click)="deleteNote()"
+            mat-raised-button color="primary">
+            Delete
+        </button>  
     </div>
 </div>
 
