--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -20,12 +20,12 @@
             {{ favoriteButton }}
         </button>  
         <button mat-raised-button color="primary" (click)="viewNote()">View</button>  
-        <button mat-raised-button color="primary" (click)="editNote()">Edit</button>  
+        <!-- <button mat-raised-button color="primary" (click)="editNote()">Edit</button>  
         <button 
             (click)="deleteNote()"
             mat-raised-button color="primary">
             Delete
-        </button>  
+        </button>   -->
     </div>
 </div>
 
