--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -106,3 +106,26 @@
         /* border: 1px solid blue; */
         font-weight: bolder;
 }
+.search-container {
+    position: relative;
+}
+  
+.search-results {
+    position: absolute;
+    top: 48px;
+    left: 427px;
+    margin: 0;
+    padding: 18px;
+    list-style: none;
+    z-index: 100;
+    background-color: #f4f4f4;
+    box-shadow: 0 2px 4px rgba(24, 0, 0, 37.2);
+    width: 100%;
+    max-height: 251px;
+    width: 26%;
+    /* color: white; */
+    overflow-y: auto;
+}
+.inheight{
+ height: 27px;
+}
