--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -9,7 +9,7 @@
             {{ note.body }}
         </p>
         <p class="dash-detail">
-            Date: {{ note.createdAt }}
+            Date: {{ note.date }}
         </p>
     </div> 
     <div class="btn-visit">
