--- a/src/app/view-node/view-node.component.html
+++ b/src/app/view-node/view-node.component.html
@@ -9,7 +9,7 @@
             {{ ifdata.body }}
         </p>
         <p class="dash-detail">
-            Date:  {{ ifdata.createdAt }}
+            Date:  {{ ifdata.date }}
         </p>
     </div> 
     <div class="btn-visit">
