--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="message">
-        <p>Welcome {{ username }}, here are your favorite and recent notes.</p>
+        <p>Welcome, here are your favorite and recent notes.</p>
         <mat-divider></mat-divider>
     </div>
     <div class="tagType">
