--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
         <mat-divider></mat-divider>
     </div>
     <div class="tagType">
-        <h3>Favorite</h3>
+        <h3>My Favorites</h3>
     </div>
     <mat-card [style.overflow]="'auto'" [style.height.px]="'270'">
         <div *ngIf="favoriteData.length != '0'">
@@ -19,7 +19,7 @@
     </mat-card> 
     <div><br/><mat-divider></mat-divider></div>
 
-    <div class="tagType"><h3>Recent</h3></div>
+    <div class="tagType"><h3>Recents</h3></div>
 
     <mat-card [style.overflow]="'auto'" [style.height.px]="'270'">
         <div *ngIf="recentNote.length != '0'">
